ATLAS-58 Make hive hook reliable (shwethags)